fixed align-items: end to flex-end

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -48,7 +48,7 @@
     margin-right: auto;
     display: flex;
     justify-content: center;
-    align-items: end;
+    align-items: flex-end;
     padding-left: 80px;
     padding-right: 80px;
 }
